--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,5 +1,5 @@
 ---
-title: 11ty Boilerplate
+title: Must have items!
 ---
 
 <!DOCTYPE html>
@@ -14,7 +14,9 @@ title: 11ty Boilerplate
   <nav>
     <ul>
       <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
+      <li><a href="/wallet/" title="Wallet">Wallet</a></li>
+      <li><a href="/keys/" title="Keys">Keys</a></li>
+      <li><a href="/phone/" title="Phone">Phone</a></li>
     </ul>
   </nav>
     {{ content }}
