--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,16 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Must have items!
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<h1>Three Items You Must Have When You Leave The House!</h1>
+<ul>
+  <li>Wallet</li>
+  <li>Keys</li>
+  <li>Phone</li>
+</ul>
+
+
+<div class="shortcode">
+  {% user "Ethan Stokes" "Stokeset" %}
+</div>
